# yavin

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  compose.yaml  docker-compose.yaml  docker-compose.yml  docker-healthcheck.sh  example-settings.py  notify_due.py  package.json  pyproject.toml  requirements-docker.txt  requirements.in  requirements.txt  run.py  setup.py
.github/: dependabot.yaml
.github/workflows/: build-and-deploy.yaml  build-container-image.yaml  build-latest-container-image.yml  hygiene.yaml  pip-compile-upgrade.yaml  ruff.yaml
ci/: gen-dependabot.py  gen-github-workflows.py  gen.py  ssh-deploy.sh  ty-check.sh
src/yavin/: __init__.py  app.py  components.py  playlist.py  settings.py  tasks.py  util.py  versions.py
src/yavin/db/: app.py  app_sqlite.py  expenses.py
yavin/: app.py  billboard.py  components.py  config.py  db.py  notify.py  settings.py  tasks.py  util.py  versions.py  yavin.py
yavin/db/: __init__.py  app.py  expenses.py
yavin/static/: bootstrap-5.2.0.bundle.js  bootstrap-5.2.1.bundle.js  bootstrap-5.2.1.css  bootstrap-5.3.6.bundle.js  bootstrap-5.3.6.css  bootstrap-icons-1.10.3.css  bootstrap-icons-1.10.5.css  bootstrap-icons-1.11.1.css  bootstrap-icons-1.11.2.css  bootstrap-icons-1.11.3.css  bootstrap-icons-1.13.1.css  bootstrap-icons-1.4.0.css  bootstrap-icons-1.4.1.css  bootstrap-icons-1.5.0.css  bootstrap-icons-1.7.0.css  bootstrap-icons-1.7.2.css  bootstrap-icons-1.8.1.css  bootstrap-icons-1.8.3.css  bootstrap-icons-1.9.1.css  captains-log.js  data-href-clickable.js  filter.js  movie-night.js  packages.js  yavin.css
yavin/static/css/: yavin.css
yavin/templates/: _back_to_home.html  _back_to_library.html  _page_title_h1.html  app-settings.html  balances-detail.html  balances.html  base.html  billboard.html  captains-log.html  electricity.html  email-billboard.html  email-library-item-due.html  email-library-item-due.jinja2  expenses.html  files.html  index.html  jar-rows.html  jar.html  library-accounts.html  library.html  modal-add-tx.html  movie-night.html  movie_night.html  not-authorized.html  not_authorized.html  packages.html  phone.html  signed-in.html  signed_in.html  tithing.html  user-permissions.html  weight.html
