[project]
name = "yavin"
version = "2024.8"
description = "Personal web tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "bibliocommons>=2025.3",
    "biblionix>=2025.1",
    "cssselect>=1.3.0",
    "flask>=3.1.2",
    "fort>=2025.1",
    "htpy>=25.10.0",
    "lxml>=6.0.2",
    "notch>=2025.2",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "waitress>=3.0.2",
]

[project.scripts]
yavin = "yavin:main"

[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.9.3,<0.10.0"]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "uv-build>=0.9.3",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
