[project]
name = "yavin"
version = "2025.0"
description = "Personal web tools"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "bibliocommons>=2026.0",
    "biblionix>=2026.0",
    "cssselect>=1.4.0",
    "flask>=3.1.3",
    "fort>=2026.0",
    "htpy>=26.5.1",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "markupsafe>=3.0.3",
    "notch>=2026.0",
    "psycopg2-binary>=2.9.12",
    "pygal>=3.1.0",
    "pyjwt>=2.13.0",
    "waitress>=3.0.2",
    "werkzeug>=3.1.8",
]

[project.scripts]
yavin = "yavin:main"

[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.11.15,<0.12.0"]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "ty>=0.0.44",
    "uv-build>=0.11.15",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
